fea-rs/test-data/compile-tests/mini-latin/bad/feature_ref_outside_aalt.fea
feature test {
    feature none; # this syntax is only allowed in the 'aalt' feature
} test;
